# neuro-research-discovery-mcp

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO_SCRIPT.md  PAPER_FACTS.md  PLAN.md  README.md  ROADMAP_v0.4.md  UPGRADE_PLAN.md  constraints-dev.txt  constraints.txt  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: security.yml
docs/: API_NOTES.md  ARCHITECTURE.md  EXAMPLES.md
neuro_research_discovery/: __init__.py  cache.py  disk_cache.py  doi.py  errors.py  models.py  rate_limit.py  retry.py  server.py  settings.py  text_safety.py
neuro_research_discovery/clients/: __init__.py  neurovault.py  openneuro.py  pubmed.py
neuro_research_discovery/tools/: __init__.py  bridge_tools.py  neurovault_tools.py  openneuro_tools.py  pubmed_tools.py
neuro_research_discovery/web/: __init__.py  __main__.py  app.py  audit_sink.py
neuro_research_discovery/web/static/: app.js  index.html  style.css
paper/: PAPER_FACTS.md  paper.bib  paper.md
scripts/: bench_neurovault_cold.py
tests/: conftest.py  test_audit_log.py  test_cache.py  test_cache_admin.py  test_disk_cache.py  test_doc_drift.py  test_doi.py  test_integration.py  test_models.py  test_neurovault_client.py  test_openneuro_client.py  test_pubmed_client.py  test_rate_limit.py  test_security_fixtures.py  test_server_mcp_shape.py  test_settings_enforcement.py  test_text_safety.py  test_tools.py  test_web_app.py
